Add Final Touches

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Trivia Game</title>
 </head>
 
 <body>
+    <h1>Trivia Game!</h1>
+    <h4>Remaining Time : <span class="time"></span></h4>
     <div class="container">
         
     </div>
